# TFHEppy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  docker-compose.yml  test.py  test_dynamic.py
.devcontainer/: devcontainer.json  docker-compose.yml
docker/: Dockerfile  Dockerfile.development  Dockerfile.tutrial  build.sh  run_tutorial.sh
docker/scripts/: build.sh  install.sh
include/: ctxt.hpp  ctxt_bin.hpp  ctxt_rgsw.hpp  ctxt_ring.hpp  gk.hpp  service.hpp  service_bin.hpp  service_dynamic.hpp  sk.hpp
src/: test.cpp
tutorial/: lib_dense.py  lib_iris.py  lib_keras.py  lib_normalization.py  lib_pca.py  lib_standardization.py  requirements.txt  standard.py  t.py  test.py  test_iris.py  train.py  train_iris_pca.py
